# juice-wrld-finder

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  admin.py  auth.py  bot.py  downloads.py  eras.py  health.py  links.py  producers.py  search.py  songs.py
app/bot/: client.py
app/bot/cogs/: admin_cog.py  search_cog.py
app/core/: auth.py  config.py  security.py
app/db/: __init__.py  session.py
app/integrations/: __init__.py  juicewrld_api.py  mega_indexer.py
app/models/: __init__.py  admin.py  links.py  lyrics.py  media.py  session_model.py  song.py
app/repositories/: __init__.py  era_repo.py  link_repo.py  search_repo.py  song_repo.py
app/services/: __init__.py  search_service.py  song_service.py
docs/: API_SOURCES.md  REFERENCE_LINKS.md  RELEASE_PACKAGES.md  SETUP.md  TESTING.md
scripts/: import_csv.py
tests/: conftest.py
tests/test_api/: test_health.py  test_song_versions_references.py
tests/test_safety/: __init__.py  test_no_leak_links.py
tests/test_scripts/: test_import_csv.py
tests/test_services/: test_search_service.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.css  router.tsx
web/src/api/: client.ts
web/src/components/: DownloadButton.tsx  FilterBar.test.tsx  FilterBar.tsx  SearchBar.test.tsx  SearchBar.tsx  SongCard.test.tsx  SongCard.tsx
web/src/hooks/: useAuth.ts
web/src/pages/: Gallery.tsx  SongDetail.tsx
web/src/test/: setup.ts
web/src/types/: index.ts
