[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juice-wrld-finder"
version = "0.1.0"
description = "Discord bot and API for searching Juice WRLD song metadata"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "discord.py==2.3.2",
    "pydantic-settings==2.1.0",
    "pydantic==2.5.0",
    "httpx==0.25.1",
    "rapidfuzz==3.5.2",
    "mega.py==1.0.13",
    "python-dotenv==1.0.0",
    "sqlalchemy-utils==0.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "respx==0.21.0",
    "responses==0.24.1",
    "ruff==0.1.8",
    "mypy==1.7.0",
    "types-python-dateutil==2.8.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
